force-app/main/default/objects/tc9_edc__Setup_Leave_Rule__mdt/tc9_edc__Setup_Leave_Rule__mdt.object-meta.xml
<CustomObject>
    <label>Setup Leave Rule</label>
    <pluralLabel>Setup Leave Rules</pluralLabel>
</CustomObject>