force-app/main/default/objects/tc9_edc__Setup_Leave_Rule__mdt/fields/tc9_edc__Accrual_Reduction_Pay_Code__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Accrual_Reduction_Pay_Code__c</fullName>
    <label>Accrual Reduction Pay Code</label>
    <referenceTo>tc9_edc__Setup_Pay_Code__mdt</referenceTo>
    <relationshipLabel>Setup Leave Rules (Accrual Reduction Pay Code)</relationshipLabel>
    <relationshipName>Setup_Leave_Rules3</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>