force-app/main/default/objects/tc9_edc__Setup_Leave_Rule__mdt/fields/tc9_edc__Anniversary_Treatment__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Anniversary_Treatment__c</fullName>
    <label>Anniversary Treatment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Continue</fullName>
                <default>true</default>
                <label>Continue</label>
            </value>
            <value>
                <fullName>Reset Balance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>