force-app/main/default/objects/tc9_edc__Setup_Leave_Rule__mdt/fields/tc9_edc__Cash_Out_Pay_Code__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Cash_Out_Pay_Code__c</fullName>
    <label>Cash Out Pay Code</label>
    <referenceTo>tc9_edc__Setup_Pay_Code__mdt</referenceTo>
    <relationshipLabel>Setup Leave Rules (Cash Out Pay Code)</relationshipLabel>
    <relationshipName>Setup_Leave_Rules4</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>