force-app/main/default/objects/tc9_edc__Setup_Leave_Rule__mdt/fields/tc9_edc__Display_Leave_Balance_As__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Display_Leave_Balance_As__c</fullName>
    <label>Display Leave Balance As</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hours and Days</fullName>
                <default>true</default>
                <label>Hours and Days</label>
            </value>
            <value>
                <fullName>Hours</fullName>
            </value>
            <value>
                <fullName>Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>