force-app/main/default/objects/tc9_edc__Setup_Leave_Rule__mdt/fields/tc9_edc__External_ID_Data_Creation__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__External_ID_Data_Creation__c</fullName>
    <description>External Id used by the data creation package.</description>
    <inlineHelpText>External Id used by the data creation package.</inlineHelpText>
    <label>External ID - Data Creation</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>