force-app/main/default/objects/tc9_edc__Setup_Leave_Rule__mdt/fields/tc9_edc__Minimum_Allowable_Balance__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Minimum_Allowable_Balance__c</fullName>
    <label>Minimum Allowable Balance</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>