force-app/main/default/objects/tc9_edc__Setup_Leave_Rule__mdt/fields/tc9_edc__Pay_Advice_Display_After_Units__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Pay_Advice_Display_After_Units__c</fullName>
    <label>Pay Advice Display After Units</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>