force-app/main/default/objects/tc9_edc__Setup_Leave_Rule__mdt/fields/tc9_edc__Purchased_Leave_Pay_Rate__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Purchased_Leave_Pay_Rate__c</fullName>
    <label>Purchased Leave Pay Rate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Average Pay Rate</fullName>
                <default>true</default>
                <label>Average Pay Rate</label>
            </value>
            <value>
                <fullName>Current Pay Rate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>