force-app/main/default/objects/tc9_edc__Setup_Leave_Rule__mdt/fields/tc9_edc__Record_Type__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Record_Type__c</fullName>
    <label>Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annual_Leave</fullName>
                <default>true</default>
                <label>Annual_Leave</label>
            </value>
            <value>
                <fullName>Compassionate_Leave</fullName>
            </value>
            <value>
                <fullName>Family_and_Domestic_Violence_Leave</fullName>
            </value>
            <value>
                <fullName>Long_Service_Leave</fullName>
            </value>
            <value>
                <fullName>Parental_Leave</fullName>
            </value>
            <value>
                <fullName>Personal_Leave</fullName>
            </value>
            <value>
                <fullName>Public_Holiday_Did_Not_Work</fullName>
            </value>
            <value>
                <fullName>Purchased_Leave</fullName>
            </value>
            <value>
                <fullName>Rostered_Day_Off</fullName>
            </value>
            <value>
                <fullName>Time_Off_in_Lieu</fullName>
            </value>
            <value>
                <fullName>Unpaid_Leave</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>