force-app/main/default/objects/tc9_edc__Setup_Leave_Rule__mdt/fields/tc9_edc__Service_Calculated_At__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Service_Calculated_At__c</fullName>
    <label>Service Calculated At</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Period Start</fullName>
                <default>true</default>
                <label>Period Start</label>
            </value>
            <value>
                <fullName>Period End</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>