force-app/main/default/objects/tc9_edc__Setup_Leave_Rule__mdt/fields/tc9_edc__Setup_Type__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Setup_Type__c</fullName>
    <label>Setup Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Legislated</fullName>
                <default>true</default>
                <label>Legislated</label>
            </value>
            <value>
                <fullName>Discretionary</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>