force-app/main/default/objects/tc9_edc__Setup_Leave_Rule__mdt/fields/tc9_edc__Unpaid_Pay_Code__c.field-meta.xml
<CustomField>
    <fullName>tc9_edc__Unpaid_Pay_Code__c</fullName>
    <label>Unpaid Pay Code</label>
    <referenceTo>tc9_edc__Setup_Pay_Code__mdt</referenceTo>
    <relationshipLabel>Setup Leave Rules (Unpaid Pay Code)</relationshipLabel>
    <relationshipName>Setup_Leave_Rules1</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>