force-app/main/default/objects/tc9_edc__Setup_Leave_Rule__mdt/listViews/tc9_edc__External_IDs.listView-meta.xml
<ListView>
    <fullName>tc9_edc__External_IDs</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>tc9_edc__External_ID_Data_Creation__c</columns>
    <filterScope>Everything</filterScope>
    <label>External IDs</label>
</ListView>